Closed Bug 151883 Opened 24 years ago Closed 23 years ago

[FIX]ASSERTION: parent frame but no child frame or undisplayed entry:

Categories

(Core :: Layout: Tables, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla1.2beta

People

(Reporter: bernd_mozilla, Assigned: bzbarsky)

References

()

Details

Attachments

(1 file)

the testcase from the layout regression tests triggers the following assertion: ###!!! ASSERTION: parent frame but no child frame or undisplayed entry: '!parent Frame', file nsCSSFrameConstructor.cpp, line 10697 looks like a recent regression
Bernd, Can you attach the testcase which is spitting this asserion.
Priority: -- → P3
Amar: look at the URL, this is the testcase.
Blocks: 152015
nsCSSFrameConstructor::AttributeChanged(nsCSSFrameConstructor * const 0x0340a008, nsIPresContext * 0x03279a30, nsIContent * 0x032727a0, int 0x00000000, nsIAtom * 0x01586ad8, int 0x00000001, int 0x00000006) line 10673 + 32 bytes StyleSetImpl::AttributeChanged(StyleSetImpl * const 0x033a1740, nsIPresContext * 0x03279a30, nsIContent * 0x032727a0, int 0x00000000, nsIAtom * 0x01586ad8, int 0x00000001, int 0x00000006) line 1588 PresShell::AttributeChanged(PresShell * const 0x0303f2b0, nsIDocument * 0x0301f418, nsIContent * 0x032727a0, int 0x00000000, nsIAtom * 0x01586ad8, int 0x00000001, int 0x00000006) line 5210 + 61 bytes nsDocument::AttributeChanged(nsDocument * const 0x0301f418, nsIContent * 0x032727a0, int 0x00000000, nsIAtom * 0x01586ad8, int 0x00000001, int 0x00000006) line 2228 + 36 bytes nsHTMLDocument::AttributeChanged(nsHTMLDocument * const 0x0301f418, nsIContent * 0x032727a0, int 0x00000000, nsIAtom * 0x01586ad8, int 0x00000001, int 0x00000006) line 1514 nsGenericHTMLElement::SetHTMLAttribute(nsGenericHTMLElement * const 0x032727a0, nsIAtom * 0x01586ad8, const nsHTMLValue & {...}, int 0x00000001) line 1989 nsGenericHTMLElement::SetAttr(nsGenericHTMLElement * const 0x032727a0, int 0x00000000, nsIAtom * 0x01586ad8, const nsAString & {...}, int 0x00000001) line 1607 + 30 bytes nsGenericHTMLElement::SetAttr(nsGenericHTMLElement * const 0x032727a0, nsINodeInfo * 0x030420f8, const nsAString & {...}, int 0x00000001) line 1743 + 36 bytes nsGenericElement::SetAttribute(nsGenericElement * const 0x032727a0, const nsAString & {...}, const nsAString & {...}) line 1120 + 27 bytes nsGenericHTMLElement::SetAttribute(nsGenericHTMLElement * const 0x032727a0, const nsAString & {...}, const nsAString & {...}) line 123 nsHTMLTableCellElement::SetAttribute(nsHTMLTableCellElement * const 0x032727a0, const nsAString & {...}, const nsAString & {...}) line 67 + 20 bytes XPTC_InvokeByIndex(nsISupports * 0x032727cc, unsigned int 0x0000001e, unsigned int 0x00000002, nsXPTCVariant * 0x0012d7ec) line 106 XPCWrappedNative::CallMethod(XPCCallContext & {...}, XPCWrappedNative::CallMode CALL_METHOD) line 1994 + 42 bytes XPC_WN_CallMethod(JSContext * 0x0330ee00, JSObject * 0x02a09e70, unsigned int 0x00000002, long * 0x033117b0, long * 0x0012dac8) line 1266 + 14 bytes js_Invoke(JSContext * 0x0330ee00, unsigned int 0x00000002, unsigned int 0x00000000) line 838 + 23 bytes js_Interpret(JSContext * 0x0330ee00, long * 0x0012e908) line 2791 + 15 bytes js_Invoke(JSContext * 0x0330ee00, unsigned int 0x00000001, unsigned int 0x00000002) line 855 + 13 bytes js_InternalInvoke(JSContext * 0x0330ee00, JSObject * 0x03292e78, long 0x016f4978, unsigned int 0x00000000, unsigned int 0x00000001, long * 0x0012eb60, long * 0x0012ea30) line 930 + 20 bytes JS_CallFunctionValue(JSContext * 0x0330ee00, JSObject * 0x03292e78, long 0x016f4978, unsigned int 0x00000001, long * 0x0012eb60, long * 0x0012ea30) line 3431 + 31 bytes nsJSContext::CallEventHandler(nsJSContext * const 0x0330ec18, void * 0x03292e78, void * 0x016f4978, unsigned int 0x00000001, void * 0x0012eb60, int * 0x0012eb64, int 0x00000000) line 1041 + 33 bytes nsJSEventListener::HandleEvent(nsJSEventListener * const 0x03420948, nsIDOMEvent * 0x03568188) line 182 + 77 bytes nsEventListenerManager::HandleEventSubType(nsListenerStruct * 0x0347f320, nsIDOMEvent * 0x03568188, nsIDOMEventTarget * 0x0330eb00, unsigned int 0x00000001, unsigned int 0x00000007) line 1182 + 20 bytes nsEventListenerManager::HandleEvent(nsEventListenerManager * const 0x034208d0, nsIPresContext * 0x03279a30, nsEvent * 0x0012f290, nsIDOMEvent * * 0x0012f24c, nsIDOMEventTarget * 0x0330eb00, unsigned int 0x00000007, nsEventStatus * 0x0012f2b8) line 1851 + 36 bytes GlobalWindowImpl::HandleDOMEvent(GlobalWindowImpl * const 0x0330eaf0, nsIPresContext * 0x03279a30, nsEvent * 0x0012f290, nsIDOMEvent * * 0x0012f24c, unsigned int 0x00000001, nsEventStatus * 0x0012f2b8) line 762 DocumentViewerImpl::LoadComplete(DocumentViewerImpl * const 0x034e7c98, unsigned int 0x00000000) line 1538 + 47 bytes nsDocShell::EndPageLoad(nsIWebProgress * 0x0331b6a4, nsIChannel * 0x03046b98, unsigned int 0x00000000) line 4129 nsWebShell::EndPageLoad(nsIWebProgress * 0x0331b6a4, nsIChannel * 0x03046b98, unsigned int 0x00000000) line 766 nsDocShell::OnStateChange(nsDocShell * const 0x0330de04, nsIWebProgress * 0x0331b6a4, nsIRequest * 0x03046b98, unsigned int 0x00020010, unsigned int 0x00000000) line 4043 nsDocLoaderImpl::FireOnStateChange(nsIWebProgress * 0x0331b6a4, nsIRequest * 0x03046b98, int 0x00020010, unsigned int 0x00000000) line 1235 nsDocLoaderImpl::doStopDocumentLoad(nsIRequest * 0x03046b98, unsigned int 0x00000000) line 870 nsDocLoaderImpl::DocLoaderIsEmpty() line 768 nsDocLoaderImpl::OnStopRequest(nsDocLoaderImpl * const 0x0331b694, nsIRequest * 0x03566800, nsISupports * 0x00000000, unsigned int 0x00000000) line 699 nsLoadGroup::RemoveRequest(nsLoadGroup * const 0x0331b908, nsIRequest * 0x03566800, nsISupports * 0x00000000, unsigned int 0x00000000) line 694 + 35 bytes PresShell::RemoveDummyLayoutRequest() line 6614 + 42 bytes PresShell::DoneRemovingReflowCommands() line 6571 PresShell::ProcessReflowCommands(int 0x00000001) line 6430 ReflowEvent::HandleEvent() line 6218 HandlePLEvent(ReflowEvent * 0x02c07660) line 6232 PL_HandleEvent(PLEvent * 0x02c07660) line 596 + 10 bytes PL_ProcessPendingEvents(PLEventQueue * 0x00fddf18) line 526 + 9 bytes
I have a fix. And this is blocking some major work for me. So I'd like to get some reviews for this one-liner that brings TableProcessChild to parity with ConstructFrameInternal. ;)
Assignee: karnaze → bzbarsky
Blocks: 171830
OS: Windows 98 → All
Priority: P3 → P1
Hardware: PC → All
Summary: ASSERTION: parent frame but no child frame or undisplayed entry: → [FIX]ASSERTION: parent frame but no child frame or undisplayed entry:
Target Milestone: --- → mozilla1.2beta
Attached patch patchSplinter Review
Attachment #102415 - Flags: review+
Comment on attachment 102415 [details] [diff] [review] patch r=karnaze
Attachment #102415 - Flags: approval+
Comment on attachment 102415 [details] [diff] [review] patch a=asa for checkin to 1.2beta (on behalf of drivers)
Checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: