layout/html/style/src/nsCSSFrameConstructor.cpp
@@ -3191,6 +3191,8 @@ nsCSSFrameConstructor::TableProcessChild(nsIPresShell*            aPresShell,
     break;
 
   case NS_STYLE_DISPLAY_NONE:
+    aState.mFrameManager->SetUndisplayedContent(aChildContent,
+                                                childStyleContext);
     break;
 
   default:
